# docs/swagger.yaml
@@ -1,4 +1,17 @@
 definitions:
+  dto.ChangePasswordDto:
+    properties:
+      confirm_password:
+        type: string
+      current_password:
+        type: string
+      new_password:
+        type: string
+    required:
+    - confirm_password
+    - current_password
+    - new_password
+    type: object
   dto.CompletePasswordRecoveryDto:
     properties:
       confirm_password:
@@ -158,6 +171,41 @@ definitions:
 info:
   contact: {}
 paths:
+  /auth/change-password:
+    post:
+      consumes:
+      - application/json
+      description: Change a user's password
+      parameters:
+      - description: Authentication token
+        in: header
+        name: Token
+        required: true
+        type: string
+      - description: change password request body
+        in: body
+        name: requestBody
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ChangePasswordDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: password change successful
+          schema:
+            type: object
+        "409":
+          description: incorrect current password
+          schema:
+            $ref: '#/definitions/helpers.ServiceError'
+        "500":
+          description: something went wrong
+          schema:
+            $ref: '#/definitions/helpers.ServiceError'
+      summary: change user password
+      tags:
+      - User
   /auth/delete-account:
     get:
       consumes:
