# internal/adapter/http-handler/http-handler.go
@@ -556,6 +556,47 @@ func (h HttpHandler) EditProfile(c *gin.Context) {
 	c.JSON(200, response)
 }
 
+// @Summary change user password
+// @Description Change a user's password
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param Token header string true "Authentication token"
+// @Success 200 {object} interface{} "password change successful"
+// @Failure 409 {object} errorHelper.ServiceError "incorrect current password"
+// @Failure 500 {object} errorHelper.ServiceError "something went wrong"
+// @Param requestBody body dto.ChangePasswordDto true "change password request body"
+// @Router /auth/change-password [post]
+func (h HttpHandler) ChangePassword(c *gin.Context) {
+	body := dto.ChangePasswordDto{}
+	if err := c.BindJSON(&body); err != nil {
+		logHelper.LogEvent(logHelper.ErrorLog, "binding edit profile request body: "+err.Error())
+		if validationErrs, ok := err.(validator.ValidationErrors); ok {
+			errFields := []string{}
+			for _, valErr := range validationErrs {
+				errFields = append(errFields, valErr.Field())
+			}
+
+			c.AbortWithStatusJSON(400, gin.H{"error": "invalid input in fields: " + strings.Join(errFields, ",")})
+			return
+		}
+
+		c.AbortWithStatusJSON(400, gin.H{"error": "invalid request body: " + err.Error()})
+		return
+	}
+
+	// get user from jwt-token
+	currentUser, _ := tokenHelper.ValidateToken(c.GetHeader("Token"))
+
+	response, err := h.httpPort.ChangePassword(c.Request.Context(), *currentUser, body)
+	if err != nil {
+		c.AbortWithStatusJSON(err.(errorHelper.ServiceError).Code, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(200, response)
+}
+
 // @Summary Rate user
 // @Description Drop a star rating for a user
 // @Tags User
